<resources>
    <string name="app_name">Lab3SimpleCalculator</string>
    <string name="button_7" />
    <string name="button_07">7</string>
    <string name="button_08" />
    <string name="button08">8\n</string>
    <string name="button_09">9\n\n</string>
    <string name="button01">1</string>
    <string name="button02">2</string>
    <string name="button03">3</string>
    <string name="button04">4</string>
    <string name="button05">5</string>
    <string name="button06">6</string>
    <string name="button07">7</string>
    <string name="button09">9\n</string>
    <string name="button00">0\n</string>
    <string name="buttonAdd">+</string>
    <string name="buttonSub">-</string>
    <string name="buttonDiv">\\u00F7</string>
    <string name="buttonMult">\\u00D7</string>
    <string name="buttonEQ">=</string>
    <string name="buttonDot">.\n</string>
</resources>